<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_calculator"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.calculator.view.CalculatorActivity">



    <EditText
        android:id="@+id/CalculatorText"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:ems="10"
        android:inputType="number" />
    <GridLayout
        android:id="@+id/buttonGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="5">

        <Button
            android:id="@+id/Clear"
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:layout_row="0"
            android:layout_column="0"
            android:background="#00FFFFFF"
            android:onClick="onClick"
            android:tag="C"
            android:text="@string/clear"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:visibility="visible" />

        <Button
            android:id="@+id/Sign"
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:layout_row="0"
            android:layout_column="1"
            android:background="#00FFFFFF"
            android:onClick="onClick"
            android:tag="~"
            android:text="@string/sign"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:visibility="visible" />

        <Button
            android:id="@+id/Delete"
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:layout_row="0"
            android:layout_column="2"
            android:background="#00FFFFFF"
            android:onClick="onClick"
            android:tag="D"
            android:text="@string/backspace"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:visibility="visible" />

        <Button
            android:id="@+id/Divide"
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:layout_row="0"
            android:layout_column="3"
            android:background="#00FFFFFF"
            android:onClick="onClick"
            android:tag="/"
            android:text="@string/divide"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:visibility="visible" />

        <Button
            android:id="@+id/Seven"
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:layout_row="1"
            android:layout_column="0"
            android:background="#00FFFFFF"
            android:onClick="onClick"
            android:tag="7"
            android:text="@string/seven"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:visibility="visible" />

        <Button
            android:id="@+id/Eight"
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:layout_row="1"
            android:layout_column="1"
            android:background="#00FFFFFF"
            android:onClick="onClick"
            android:tag="8"
            android:text="@string/eight"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:visibility="visible" />

        <Button
            android:id="@+id/Nine"
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:layout_row="1"
            android:layout_column="2"
            android:background="#00FFFFFF"
            android:onClick="onClick"
            android:tag="9"
            android:text="@string/nine"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:visibility="visible" />

        <Button
            android:id="@+id/Multiply"
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:layout_row="1"
            android:layout_column="3"
            android:background="#00FFFFFF"
            android:onClick="onClick"
            android:tag="*"
            android:text="@string/multiply"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:visibility="visible" />

        <Button
            android:id="@+id/Four"
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:layout_row="2"
            android:layout_column="0"
            android:background="#00FFFFFF"
            android:onClick="onClick"
            android:tag="4"
            android:text="@string/four"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:visibility="visible" />

        <Button
            android:id="@+id/Five"
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:layout_row="2"
            android:layout_column="1"
            android:background="#00FFFFFF"
            android:onClick="onClick"
            android:tag="5"
            android:text="@string/five"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:visibility="visible" />

        <Button
            android:id="@+id/Six"
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:layout_row="2"
            android:layout_column="2"
            android:background="#00FFFFFF"
            android:onClick="onClick"
            android:tag="6"
            android:text="@string/six"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:visibility="visible" />

        <Button
            android:id="@+id/Minus"
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:layout_row="2"
            android:layout_column="3"
            android:background="#00FFFFFF"
            android:onClick="onClick"
            android:tag="-"
            android:text="@string/subtract"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:visibility="visible" />

        <Button
            android:id="@+id/Three"
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:layout_row="3"
            android:layout_column="0"
            android:background="#00FFFFFF"
            android:onClick="onClick"
            android:tag="1"
            android:text="@string/one"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:visibility="visible" />

        <Button
            android:id="@+id/Two"
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:layout_row="3"
            android:layout_column="1"
            android:background="#00FFFFFF"
            android:onClick="onClick"
            android:tag="2"
            android:text="@string/two"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:visibility="visible" />

        <Button
            android:id="@+id/One"
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:layout_row="3"
            android:layout_column="2"
            android:background="#00FFFFFF"
            android:onClick="onClick"
            android:tag="3"
            android:text="@string/three"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:visibility="visible" />

        <Button
            android:id="@+id/Add"
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:layout_row="3"
            android:layout_column="3"
            android:background="#00FFFFFF"
            android:onClick="onClick"
            android:tag="+"
            android:text="@string/add"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:visibility="visible" />

        <Button
            android:id="@+id/Zero"
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:layout_row="4"
            android:layout_column="0"
            android:background="#00FFFFFF"
            android:onClick="onClick"
            android:tag="0"
            android:text="@string/zero"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:visibility="visible" />

        <Button
            android:id="@+id/Decimal"
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:layout_row="4"
            android:layout_column="2"
            android:background="#00FFFFFF"
            android:onClick="onClick"
            android:tag="."
            android:text="@string/decimal"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:visibility="visible" />

        <Button
            android:id="@+id/Equals"
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:layout_row="4"
            android:layout_column="3"
            android:background="#00FFFFFF"
            android:onClick="onClick"
            android:tag="="
            android:text="@string/equals"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:visibility="visible" />



    </GridLayout>


</LinearLayout>